--- a/ica7/style.css
+++ b/ica7/style.css
@@ -374,3 +374,17 @@ body.dark .part-request button:hover {
     background-color: #5599dd;
   }
 }
+
+back-btn {
+  background-color: #007BFF; 
+  border: none;
+  border-radius: 4px;
+  padding: 10px 15px;
+  cursor: pointer;
+  color: #fff;
+  font-weight: bold;
+}
+
+.back-btn:hover {
+  background-color: #0056b3;
+}
