--- a/ica8/style.css
+++ b/ica8/style.css
@@ -62,7 +62,7 @@ body {
   text-align: left;
 }
 
-/* Top-level dropdown (Parts) */
+/* top-level dropdown (Parts) */
 .nav-menu > .nested-menu {
   position: relative;
 }
